force-app/main/default/objects/Kpi_formation__c/Kpi_formation__c.object-meta.xml
<CustomObject>
    <label>KPI Formation</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Formation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>