force-app/main/default/objects/Kpi_formation__c/fields/NBD_tracteurs__c.field-meta.xml
<CustomField>
    <fullName>NBD_tracteurs__c</fullName>
    <label>Détracteurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>