force-app/main/default/objects/Kpi_formation__c/fields/NBPassifs__c.field-meta.xml
<CustomField>
    <fullName>NBPassifs__c</fullName>
    <label>Passifs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>