force-app/main/default/objects/Kpi_formation__c/fields/NBPromoteurs__c.field-meta.xml
<CustomField>
    <fullName>NBPromoteurs__c</fullName>
    <label>Promoteurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>