force-app/main/default/objects/Kpi_formation__c/fields/Nombre_de_r_pondants__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_r_pondants__c</fullName>
    <label>Nombre de répondants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>