force-app/main/default/objects/Kpi_formation__c/fields/Note_moyenne__c.field-meta.xml
<CustomField>
    <fullName>Note_moyenne__c</fullName>
    <label>Note moyenne</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>