force-app/main/default/objects/Kpi_formation__c/fields/Perc_D_tracteurs__c.field-meta.xml
<CustomField>
    <fullName>Perc_D_tracteurs__c</fullName>
    <formula>NBD_tracteurs__c / Nombre_de_r_pondants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Détracteurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>