force-app/main/default/objects/Kpi_formation__c/fields/Perc_Passifs__c.field-meta.xml
<CustomField>
    <fullName>Perc_Passifs__c</fullName>
    <formula>NBPassifs__c / Nombre_de_r_pondants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Passifs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>