force-app/main/default/objects/Kpi_formation__c/fields/Perc_Promoteurs__c.field-meta.xml
<CustomField>
    <fullName>Perc_Promoteurs__c</fullName>
    <formula>NBPromoteurs__c  / Nombre_de_r_pondants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Promoteurs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>