force-app/main/default/objects/Kpi_formation__c/fields/Score_J__c.field-meta.xml
<CustomField>
    <fullName>Score_J__c</fullName>
    <label>Score J</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>