force-app/main/default/objects/Kpi_formation__c/fields/Score_NPS__c.field-meta.xml
<CustomField>
    <fullName>Score_NPS__c</fullName>
    <formula>(NBPromoteurs__c  -  NBD_tracteurs__c) /  Nombre_de_r_pondants__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>