force-app/main/default/objects/Kpi_formation__c/fields/Score_S1__c.field-meta.xml
<CustomField>
    <fullName>Score_S1__c</fullName>
    <label>Score S1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>