force-app/main/default/objects/Kpi_formation__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Prestataire__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>globalSite</valueSetName>
    </valueSet>
</CustomField>