force-app/main/default/objects/Kpi_formation__c/recordTypes/NPS.recordType-meta.xml
<RecordType>
    <fullName>NPS</fullName>
    <active>true</active>
    <label>NPS</label>
</RecordType>