force-app/main/default/objects/Kpi_formation__c/recordTypes/Prise_de_temp_rature.recordType-meta.xml
<RecordType>
    <fullName>Prise_de_temp_rature</fullName>
    <active>true</active>
    <label>Prise de température</label>
</RecordType>