force-app/main/default/objects/Kpi_formation__c/recordTypes/Satisfaction_post_formation.recordType-meta.xml
<RecordType>
    <fullName>Satisfaction_post_formation</fullName>
    <active>true</active>
    <label>Satisfaction post-formation</label>
</RecordType>