force-app/main/default/objects/Kpi_formation__c/recordTypes/SUS.recordType-meta.xml
<RecordType>
    <fullName>SUS</fullName>
    <active>true</active>
    <label>SUS</label>
</RecordType>