force-app/main/default/objects/Kpi_formation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>Note_moyenne__c</columns>
    <columns>Score_J__c</columns>
    <columns>Satisfaction__c</columns>
    <columns>Score_S1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Kpi_formation__c.NPS</value>
    </filters>
    <label>All</label>
</ListView>